maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:8: error: value etat is not a member of Unit
      case 0 => if(getDirection() == Direction.NORTH){while(!estFaceMur){avance()} etat = 1 }
                                                                                   ^IslandMaze:38: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime17.IslandMaze'
override def run() {
             ^